[gd_scene load_steps=15 format=3 uid="uid://bne580bqen3bs"]

[ext_resource type="Script" path="res://Scripts/sound_manager.gd" id="1_r4wvk"]
[ext_resource type="AudioStream" uid="uid://5uk4wxmim0db" path="res://Assets/SFX/Music/Ambient 8.mp3" id="2_is8ip"]
[ext_resource type="AudioStream" uid="uid://c30aehd3jeulr" path="res://Assets/SFX/Music/Radiohead.ogg" id="3_ihltv"]
[ext_resource type="AudioStream" uid="uid://begnm3s2b0la2" path="res://Assets/SFX/Effects/033_Denied_03.wav" id="4_pmu6a"]
[ext_resource type="AudioStream" uid="uid://crxlopovuy05f" path="res://Assets/SFX/Effects/051_use_item_01.wav" id="5_vfseq"]
[ext_resource type="AudioStream" uid="uid://cq1mwx0tf7u5m" path="res://Assets/SFX/Effects/071_Unequip_01.wav" id="6_wt8tb"]
[ext_resource type="AudioStream" uid="uid://gfojysk6v2im" path="res://Assets/SFX/Effects/013_Confirm_03.wav" id="7_s38kl"]
[ext_resource type="AudioStream" uid="uid://7c074aq7mb00" path="res://Assets/SFX/Effects/Retro Blop StereoUP 04.wav" id="8_suy51"]

[sub_resource type="Animation" id="Animation_5bmb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuBGMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuBGMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GameMusic:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameMusic:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}

[sub_resource type="Animation" id="Animation_job1o"]
resource_name = "bg_music_fade_in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuBGMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.6, 5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [-80.0, -20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuBGMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sqwgc"]
resource_name = "bg_music_fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuBGMusic:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [-20.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuBGMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_oohkw"]
resource_name = "game_music_fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameMusic:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [-80.0, -40.0]
}

[sub_resource type="Animation" id="Animation_costn"]
resource_name = "game_music_fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameMusic:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GameMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [-40.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wgegk"]
_data = {
"RESET": SubResource("Animation_5bmb4"),
"bg_music_fade_in": SubResource("Animation_job1o"),
"bg_music_fade_out": SubResource("Animation_sqwgc"),
"game_music_fade_in": SubResource("Animation_oohkw"),
"game_music_fade_out": SubResource("Animation_costn")
}

[node name="SoundManager" type="Node"]
script = ExtResource("1_r4wvk")

[node name="MenuBGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_is8ip")
volume_db = -80.0

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ihltv")
volume_db = -80.0

[node name="TrashCardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pmu6a")
volume_db = -20.0

[node name="UseCardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vfseq")
volume_db = -15.0

[node name="DrawCardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wt8tb")
volume_db = -15.0

[node name="SwapCardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_s38kl")
volume_db = -15.0

[node name="RingBellSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_suy51")
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wgegk")
}
